--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,19 @@ before_install:
 
 script:
   - docker run -e CI=true 585859/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "dockerreact"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-864938016639"
+  bucket_path: "dockerreact"
+  on:
+    branch: master
+  access_key_id: 
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+
+
